--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angular2-cookie": "^1.2.6",
+    "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
